k8s/generated/local/fastapi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: apps
  labels:
    app: fastapi
    k3sapp.io/app: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
        k3sapp.io/app: fastapi
    spec:
      containers:
      - name: fastapi
        image: fastapi:latest
        ports:
        - containerPort: 8000
          protocol: TCP
          name: http
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
        startupProbe:
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 30
          httpGet:
            path: /health
            port: 8000
        readinessProbe:
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8000
        livenessProbe:
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: apps
  labels:
    app: fastapi
    k3sapp.io/app: fastapi
spec:
  selector:
    app: fastapi
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: fastapi-host-rewrite
  namespace: apps
  labels:
    app: fastapi
    k3sapp.io/app: fastapi
spec:
  headers:
    customRequestHeaders:
      Host: fastapi.apps
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fastapi-routes
  namespace: apps
  labels:
    app: fastapi
    k3sapp.io/app: fastapi
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: PathPrefix(`/fastapi`)
    kind: Rule
    services:
    - name: keda-interceptor-proxy
      port: 8080
    middlewares:
    - name: fastapi-host-rewrite
      namespace: apps
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fastapi-ingress
  namespace: apps
  labels:
    app: fastapi
    k3sapp.io/app: fastapi
    k3sapp.io/visibility: public
spec:
  podSelector:
    matchLabels:
      app: fastapi
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - protocol: TCP
      port: 8000
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: keda
    ports:
    - protocol: TCP
      port: 8000
